added menu content

--- a/Burgery.html
+++ b/Burgery.html
@@ -16,10 +16,11 @@
                 </a>
     
                 <nav>
+                    <a href="#newItem"><i>NEW!</i></a>
                     <a href="https://www.instagram.com/villageburgerysteveston/?hl=en" target="_blank">
                         <img src='img/transparent.png' width="40">
                     </a>
-                    <a href="#menu">Menu</a>
+                    <a href="#menu">Menu </a>
                     <a href="#">Contact Us</a>
                 </nav>
     
@@ -75,9 +76,13 @@
         </div>
     </div>
     <section id="menu" class="menu">
-        <h1>Menu</h1>
+        <h1>Menu· 菜单</h1>
         <h4>* Please refer to actual prices <u>in-store</u> at the time, thank you! <br> * 请以当日<u>店内</u>价格为准, 谢谢! </h4> 
-        <div class="menu-area"></div>
+        <div class="menu-area">
+            <div class="menuLeft"></div>
+            <div class="menuRight"></div>
+            <div class="special"></div>
+        </div>
     </section>
 </body>
 </html>
